--- a/src/app/components/views/category/category-read/category-read.component.html
+++ b/src/app/components/views/category/category-read/category-read.component.html
@@ -3,31 +3,50 @@
         <h1>Categoria</h1>
     </div>
 
+    <button class="mat-elevation-z8" mat-raised-button >New Category</button>
+
     <div class="mat-elevation-z8 table-container">
         <table class="table" mat-table [dataSource]="categories">
         
             <!-- ID Column -->
             <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef> ID </th>
+              <th class="id-container" mat-header-cell *matHeaderCellDef> ID </th>
               <td mat-cell *matCellDef="let row"> {{row.id}} </td>
             </ng-container>
         
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <th class="name-container" mat-header-cell *matHeaderCellDef> Name </th>
               <td mat-cell *matCellDef="let row"> {{row.name}} </td>
             </ng-container>
         
             <!-- Description Column -->
             <ng-container matColumnDef="description">
-              <th mat-header-cell *matHeaderCellDef> Description </th>
+              <th class="desc-container" mat-header-cell *matHeaderCellDef> Description </th>
               <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+            </ng-container>
+
+            <!-- Books Column -->
+            <ng-container matColumnDef="books">
+              <th class="books-container" mat-header-cell *matHeaderCellDef> Books </th>
+              <td mat-cell *matCellDef="let row">
+                <a href="#" class="book">
+                  <i class="material-icons">book</i>
+                </a>
+              </td>
             </ng-container>
         
             <!-- Actions Column -->
             <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef> Actions </th>
-              <td mat-cell *matCellDef="let row"> </td>
+              <th class="act-container" mat-header-cell *matHeaderCellDef> Actions </th>
+              <td mat-cell *matCellDef="let row">
+                <a href="#" class="edit">
+                  <i class="material-icons">edit</i>
+                </a>
+                <a href="#" class="delete">
+                  <i class="material-icons">delete</i>
+                </a>
+              </td>
             </ng-container>
         
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
