--- a/src/app/components/views/category/category-create/category-create.component.html
+++ b/src/app/components/views/category/category-create/category-create.component.html
@@ -1,1 +1,17 @@
-<p>category-create works!</p>
+<form>
+    <h1>Create a new category</h1>
+
+    <mat-form-field class="form">
+        <mat-label>Name</mat-label>
+        <input matInput [(ngModel)]="category.name" type="text" name="name" placeholder="Type the category name">
+    </mat-form-field>
+    <mat-form-field class="form">
+        <mat-label>Description</mat-label>
+        <textarea matInput [(ngModel)]="category.description" type="text" name="description" placeholder="Type the category description"></textarea>
+    </mat-form-field>
+
+    <div class="buttons">
+        <button class="mat-elevation-z8" (click)="create()" mat-raised-button >Create</button>
+        <button class="mat-elevation-z8" (click)="cancel()" mat-raised-button >Cancel</button>
+    </div>
+</form>
